--- a/app/components/lookbook/ui/pages/page/page.css
+++ b/app/components/lookbook/ui/pages/page/page.css
@@ -1,30 +1,30 @@
 [data-component="page"] {
-  font-family: var(--lookbook-font-prose);
-  background-color: var(--lookbook-color-white);
+  font-family: var(--lb-font-prose);
+  background-color: var(--lb-color-white);
   min-height: 100vh;
 
   .page-slat {
-    padding-inline: var(--lookbook-spacing-x-large);
+    padding-inline: var(--lb-spacing-x-large);
   }
 
   .page-header {
-    border-bottom: 1px solid var(--lookbook-color-base-300);
-    padding-block: var(--lookbook-spacing-x-large);
+    border-bottom: 1px solid var(--lb-color-base-300);
+    padding-block: var(--lb-spacing-x-large);
   }
 
   .page-title {
-    font-weight: var(--lookbook-font-weight-bold);
-    font-size: var(--lookbook-font-size-2x-large);
+    font-weight: var(--lb-font-weight-bold);
+    font-size: var(--lb-font-size-2x-large);
   }
 
   .page-body {
-    padding-top: var(--lookbook-spacing-2x-large);
-    padding-bottom: var(--lookbook-spacing-3x-large);
+    padding-top: var(--lb-spacing-2x-large);
+    padding-bottom: var(--lb-spacing-3x-large);
   }
 
   .page-footer {
-    border-top: 1px solid var(--lookbook-color-base-300);
-    padding-block: var(--lookbook-spacing-x-large);
+    border-top: 1px solid var(--lb-color-base-300);
+    padding-block: var(--lb-spacing-x-large);
   }
 
   .page-nav-links {
@@ -32,13 +32,13 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    font-family: var(--lookbook-font-ui);
+    font-family: var(--lb-font-ui);
   }
 
   .page-nav-link {
     display: flex;
     align-items: center;
-    gap: var(--lookbook-spacing-2x-small);
+    gap: var(--lb-spacing-2x-small);
   }
 
   .page-nav-link-next {
