--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -1,10 +1,10 @@
 <style>
   .panel {
-    padding: var(--lookbook-panel-padding);
+    padding: var(--lb-panel-padding);
   }
 
   section {
-    padding-block: var(--lookbook-spacing-medium);
+    padding-block: var(--lb-spacing-medium);
   }
 
   section:first-child {
@@ -12,17 +12,17 @@
   }
 
   section + section {
-    border-top: 1px dashed var(--lookbook-color-base-400);
+    border-top: 1px dashed var(--lb-color-base-400);
   }
 
   .label {
-    color: var(--lookbook-color-base-800);
-    margin-bottom: var(--lookbook-spacing-small);
+    color: var(--lb-color-base-800);
+    margin-bottom: var(--lb-spacing-small);
     font-weight: 500;
   }
 
   .placeholder {
-    color: var(--lookbook-color-base-400);
+    color: var(--lb-color-base-400);
     font-style: italic;
   }
 </style>
