--- a/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
+++ b/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
@@ -6,7 +6,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    gap: var(--lookbook-spacing-2x-small);
+    gap: var(--lb-spacing-2x-small);
     user-select: none;
 
     .icon {
@@ -21,26 +21,26 @@
 
   &[data-theme="positive"] {
     .status-bar-item-summary .icon {
-      color: var(--lookbook-status-bar-item-color-positive);
+      color: var(--lb-status-bar-item-color-positive);
     }
   }
 
   &[data-theme="error"] {
     .status-bar-item-summary {
-      color: var(--lookbook-status-bar-item-color-error);
+      color: var(--lb-status-bar-item-color-error);
 
       .icon {
-        color: var(--lookbook-status-bar-item-color-error);
+        color: var(--lb-status-bar-item-color-error);
       }
     }
   }
 
   &[data-theme="warning"] {
     .status-bar-item-summary {
-      color: var(--lookbook-status-bar-item-color-warning);
+      color: var(--lb-status-bar-item-color-warning);
 
       .icon {
-        color: var(--lookbook-status-bar-item-color-warning);
+        color: var(--lb-status-bar-item-color-warning);
       }
     }
   }
