--- a/app/components/lookbook/ui/app/system_message/system_message.css
+++ b/app/components/lookbook/ui/app/system_message/system_message.css
@@ -1,51 +1,51 @@
 [data-component="system-message"] {
-  font-family: var(--lookbook-font-prose);
-  color: var(--lookbook-system-message-color);
-  background: var(--lookbook-system-message-background-color);
-  border: 1px solid var(--lookbook-system-message-border-color);
-  padding: var(--lookbook-spacing-x-large);
+  font-family: var(--lb-font-prose);
+  color: var(--lb-system-message-color);
+  background: var(--lb-system-message-background-color);
+  border: 1px solid var(--lb-system-message-border-color);
+  padding: var(--lb-spacing-x-large);
   max-width: 680px;
-  margin-top: var(--lookbook-spacing-large);
+  margin-top: var(--lb-spacing-large);
   margin-inline: auto;
-  border-radius: var(--lookbook-border-radius-medium);
+  border-radius: var(--lb-border-radius-medium);
 
   &.with-icon {
     display: grid;
     grid-template-columns: min-content 1fr;
-    column-gap: var(--lookbook-spacing-medium);
-    padding-left: var(--lookbook-spacing-large);
+    column-gap: var(--lb-spacing-medium);
+    padding-left: var(--lb-spacing-large);
   }
 
   .message-title {
-    font-weight: var(--lookbook-font-weight-bold);
-    font-size: var(--lookbook-font-size-medium);
-    color: var(--lookbook-system-message-title-color);
-    margin-bottom: var(--lookbook-spacing-x-small);
+    font-weight: var(--lb-font-weight-bold);
+    font-size: var(--lb-font-size-medium);
+    color: var(--lb-system-message-title-color);
+    margin-bottom: var(--lb-spacing-x-small);
   }
 
   .message-text {
-    font-size: var(--lookbook-font-size-small);
+    font-size: var(--lb-font-size-small);
   }
 
   .message-icon svg,
   .message-icon .icon {
     width: 40px;
-    color: var(--lookbook-system-message-icon-color);
+    color: var(--lb-system-message-icon-color);
   }
 
   .message-icon > svg {
-    margin-right: var(--lookbook-spacing-2x-small);
+    margin-right: var(--lb-spacing-2x-small);
   }
 
   &[data-theme="error"] {
-    border-color: var(--lookbook-system-message-border-color-error);
+    border-color: var(--lb-system-message-border-color-error);
 
     .message-title {
-      color: var(--lookbook-system-message-title-color-error);
+      color: var(--lb-system-message-title-color-error);
     }
 
     .message-icon svg {
-      color: var(--lookbook-system-message-icon-color-error);
+      color: var(--lb-system-message-icon-color-error);
     }
   }
 }
