--- a/app/components/lookbook/ui/elements/pane_group/pane_group.css
+++ b/app/components/lookbook/ui/elements/pane_group/pane_group.css
@@ -15,7 +15,7 @@
 
   &[data-orientation="horizontal"] {
     > .pane-group-gutter {
-      border-bottom: 1px solid var(--lookbook-split-pane-gutter-border-color);
+      border-bottom: 1px solid var(--lb-split-pane-gutter-border-color);
       width: 100%;
       height: 1px;
 
@@ -32,7 +32,7 @@
 
   &[data-orientation="vertical"] {
     > .pane-group-gutter {
-      border-right: 1px solid var(--lookbook-app-divider-color);
+      border-right: 1px solid var(--lb-app-divider-color);
       height: 100%;
       width: 1px;
 
