--- a/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.css
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.css
@@ -1,20 +1,20 @@
 [data-component="toolbar-tab"] {
-  color: var(--lookbook-tab-color);
-  height: var(--lookbook-toolbar-height);
+  color: var(--lb-tab-color);
+  height: var(--lb-toolbar-height);
   display: flex;
   align-items: center;
-  font-size: var(--lookbook-font-size-small);
-  padding-inline: var(--lookbook-spacing-small);
+  font-size: var(--lb-font-size-small);
+  padding-inline: var(--lb-spacing-small);
   border-bottom: 2px solid transparent;
   cursor: pointer;
   user-select: none;
 
   &.disabled {
-    color: var(--lookbook-tab-color-disabled);
+    color: var(--lb-tab-color-disabled);
   }
 
   &[aria-selected="true"] {
-    color: var(--lookbook-tab-color-selected);
-    border-bottom-color: var(--lookbook-tab-border-color-selected);
+    color: var(--lb-tab-color-selected);
+    border-bottom-color: var(--lb-tab-border-color-selected);
   }
 }
