--- a/app/components/lookbook/ui/elements/toolbar/toolbar_tab_group/toolbar_tab_group.css
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_tab_group/toolbar_tab_group.css
@@ -1,5 +1,5 @@
 [data-component="toolbar-tab-group"] {
   display: flex;
-  gap: var(--lookbook-spacing-small);
-  height: var(--lookbook-toolbar-height);
+  gap: var(--lb-spacing-small);
+  height: var(--lb-toolbar-height);
 }
