--- a/assets/css/tokens/structure.css
+++ b/assets/css/tokens/structure.css
@@ -3,29 +3,29 @@
    * App header
    */
 
-  --lookbook-header-height: 2.5rem;
+  --lb-header-height: 2.5rem;
 
   /*
    * Toolbars
    */
 
-  --lookbook-toolbar-height: 2.5rem;
+  --lb-toolbar-height: 2.5rem;
 
   /*
    * Panels
    */
 
-  --lookbook-panel-padding: var(--lookbook-spacing-medium);
+  --lb-panel-padding: var(--lb-spacing-medium);
 
   /*
    * Status bar
    */
 
-  --lookbook-status-bar-height: 1.5rem;
+  --lb-status-bar-height: 1.5rem;
 
   /*
    * Nav
    */
 
-  --lookbook-nav-item-height: 1.75rem;
+  --lb-nav-item-height: 1.75rem;
 }
