--- a/assets/entrypoints/mailer.css
+++ b/assets/entrypoints/mailer.css
@@ -19,16 +19,16 @@ header {
   padding: 10px 0 0 0;
   margin: 0;
   background: white;
-  font-size: var(--lookbook-font-size-small);
-  font-family: var(--lookbook-font-ui);
-  border-bottom: 1px solid var(--lookbook-app-divider-color);
+  font-size: var(--lb-font-size-small);
+  font-family: var(--lb-font-ui);
+  border-bottom: 1px solid var(--lb-app-divider-color);
   overflow: hidden;
 }
 
 dl {
   margin: 0 0 10px 0;
   padding: 0;
-  font-size: var(--lookbook-font-size-small);
+  font-size: var(--lb-font-size-small);
 }
 
 dt {
@@ -38,13 +38,13 @@ dt {
   clear: left;
   text-align: right;
   color: #7f7f7f;
-  font-size: var(--lookbook-font-size-small);
+  font-size: var(--lb-font-size-small);
 }
 
 dd {
   margin-left: 90px;
   padding: 1px;
-  font-size: var(--lookbook-font-size-small);
+  font-size: var(--lb-font-size-small);
 }
 
 dd:empty:before {
